blog/blog-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog-client-deploy
  name: blog-client-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: blog-client-deploy
  type: ClusterIP
