blog/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: blog.mharikmert.dev
    http:
      paths:
      - backend:
          service:
            name: blog-client-service
            port:
              number: 80
        path: /
        pathType: Prefix
